--- a/src/styles/Inventario.css
+++ b/src/styles/Inventario.css
@@ -23,7 +23,7 @@ body {
 /* Título */
 .inventory-container h2 {
   text-align: center;
-  margin-bottom: 25p;
+  margin-bottom: 25px;
   color: #1f3a93; /* azul principal */
   font-size: 2rem;
   letter-spacing: 1px;
