--- a/src/styles/Inventario.css
+++ b/src/styles/Inventario.css
@@ -180,7 +180,7 @@ body {
   color: white;
   transition: all 0.2s ease;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  flex-wrap: nowra;
+  flex-wrap: nowrap;
 }
 
 .btn-details { background-color: #3498db; }
