--- a/src/styles/Inventario.css
+++ b/src/styles/Inventario.css
@@ -193,7 +193,7 @@ body {
 
 /* Paginación */
 .pagination {
-  display: flex;
+  display: flex
   justify-content: center;
   align-items: center;
   margin-top: 20px;
