--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,6 @@
-/* index.css */
-
-/* Fuente global y tamaño base */
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 16px; /* tamaño base legible */
+  font-size: 16px; 
   line-height: 1.6;
   color: #333;
   background-color: #e8f0f8; 
@@ -11,7 +8,6 @@ body {
   padding: 0;
 }
 
-/* Opcional: títulos globales */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
